# laws

./: README.md  laws.cabal  stack-8.6.yaml  stack-8.8.yaml
